--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
-"dependencies": {
-  "chart.js": "^4.4.7",
-  "next": "15.0.1",
-  "react": "^18.2.0",  
-  "react-chartjs-2": "^5.2.0",
-  "react-dom": "^18.2.0",   
-  "react-icons": "^5.3.0"
-},
-
+  "dependencies": {
+    "chart.js": "^4.4.7",
+    "next": "15.0.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-spring": "^9.7.5"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
